*add item, remove Item *add destination, remove destinationId *added categories *added quantity